ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__nested_call_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (16) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (17) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (24) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (31) at (1, 2) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (27) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (28) at (6, 1) { };
\node[font=\tiny] (note_6) at (3.5, 0.5) {Return([0])};
\node[font=\tiny] (note_7) at (3.5, 0.5) {Return([0])};
\node[font=\tiny] (note_8) at (3.5, 0.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (22) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (23) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (30) at (10, 1) { };
\node[font=\tiny] (note_2) at (7.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] (note_3) at (7.5, 1.5) {Return([1])};
\node[font=\tiny] (note_4) at (7.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] (note_5) at (7.5, 1.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (19);
		\path[->, blue] (1) [bend right] edge  node { } (20);
		\path[->, blue] (2) [bend right] edge  node { } (14);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (1) [bend right] edge  node { } (23);
		\path[->, blue] (2) [bend right] edge  node { } (17);
		\path[->, blue] (6) [loop right] edge  node { } (6);
		\path[->, blue] (7) [bend right] edge  node { } (26);
		\path[->, blue] (8) [loop right] edge  node { } (8);
		\path[->, blue] (7) [bend right] edge  node { } (28);
		\path[->, blue] (1) [bend right] edge  node { } (29);
		\path[->, blue] (3) [bend right] edge  node { } (30);
		\path[->, blue] (1) [bend right] edge  node { } (30);
		\path[->, blue] (0) [bend right] edge  node { } (31);


                \end{tikzpicture}
            \end{document}
