ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_assignment_small_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 15) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (0, 16) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (0, 23) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (8) at (2, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (9) at (2, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (10) at (2, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (11) at (2, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (12) at (2, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (13) at (2, 16) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (14) at (2, 17) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (15) at (2, 22) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (16) at (2, 23) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (17) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (18) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (19) at (1, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (20) at (1, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (21) at (1, 16) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (22) at (1, 17) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (23) at (1, 22) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (24) at (1, 23) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (0, 17) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 16) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (31) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (32) at (1, 4) { };
\node[font=\tiny] (note_0) at (-1.5, 4.5) {Assign(1, 0)};
\node[font=\tiny] (note_1) at (-1.5, 5.5) {BinOp(3, 2, 1)};
\node[font=\tiny] (note_2) at (-1.5, 6.5) {Conditional(3, [5, 6])};
\node[font=\tiny] (note_3) at (-1.5, 7.5) {Block(5)};
\node[font=\tiny] (note_4) at (-1.5, 8.5) {Assign(4, 0)};
\node[font=\tiny] (note_5) at (-1.5, 9.5) {Const(5, 1.0)};
\node[font=\tiny] (note_6) at (-1.5, 10.5) {BinOp(6, 5, 4)};
\node[font=\tiny] (note_7) at (-1.5, 11.5) {Conditional(6, [4])};
\node[font=\tiny] (note_8) at (-1.5, 12.5) {Kill(6)};
\node[font=\tiny] (note_9) at (-1.5, 13.5) {Kill(5)};
\node[font=\tiny] (note_10) at (-1.5, 14.5) {Kill(4)};
\node[font=\tiny] (note_11) at (-1.5, 15.5) {Jump(6)};
\node[font=\tiny] (note_12) at (-1.5, 16.5) {Block(6)};
\node[font=\tiny] (note_13) at (-1.5, 17.5) {Assign(7, 0)};
\node[font=\tiny] (note_14) at (-1.5, 18.5) {Const(8, -1.0)};
\node[font=\tiny] (note_15) at (-1.5, 19.5) {Assign(7, 0)};
\node[font=\tiny] (note_16) at (-1.5, 20.5) {Const(8, -1.0)};
\node[font=\tiny] (note_17) at (-1.5, 21.5) {Jump(7)};
\node[font=\tiny] (note_18) at (-1.5, 22.5) {Block(7)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (0) [bend right] edge  node { } (19);
		\path[->, blue] (0) [bend right] edge  node { } (20);
		\path[->, blue] (0) [bend right] edge  node { } (21);
		\path[->, blue] (0) [bend right] edge  node { } (22);
		\path[->, blue] (0) [bend right] edge  node { } (23);
		\path[->, blue] (0) [bend right] edge  node { } (24);
		\path[->, blue] (0) [bend right] edge  node { } (25);
		\path[->, blue] (0) [bend right] edge  node { } (26);
		\path[->, blue] (0) [bend right] edge  node { } (27);
		\path[->, blue] (0) [bend right] edge  node { } (28);
		\path[->, blue] (0) [bend right] edge  node { } (29);
		\path[->, blue] (0) [bend right] edge  node { } (30);
		\path[->, blue] (0) [bend right] edge  node { } (31);
		\path[->, blue] (0) [bend right] edge  node { } (32);


                \end{tikzpicture}
            \end{document}
