ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_binop_offset_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (3) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (4) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (5) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (6) at (1, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 2.5) {BinOp(2, 0, 1)};
\node[font=\tiny] (note_2) at (-1.5, 3.5) {BinOp(2, 1, 0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);


                \end{tikzpicture}
            \end{document}
